# GEX

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: pyproject.toml
api/src/gexlens_api/: __init__.py  alerts.py  crud.py  data.py  heatmap.py  live.py  main.py  meta_repo.py  status.py
api/tests/: test_api.py  test_crud_alerts.py  test_health.py  test_internal.py  test_live.py  test_watchlist_notify.py
docker/: frontend.Dockerfile  nginx.conf  python.Dockerfile
docs/: SPEC.md
docs/adr/: 0001-ibkr-account-limits.md  0002-strike-band-expansion.md  0003-multi-instrument.md  0004-setup-detektor.md  0005-provizorni-bar-rozdelane-minuty.md  0006-projekce-heatmapy-do-settle.md  0007-persistence-ui-voleb.md  0008-sekundarni-zed.md  0009-dyn-gex-pole.md  0010-dominance-zdi.md  0011-flow-adjusted-gex.md
docs/manual/: ADMIN-MANUAL.md  UZIVATELSKY-MANUAL.md
engine/: pyproject.toml
engine/src/gexlens_engine/: __init__.py  __main__.py  adapters.py  config.py  instruments.py  runtime.py  setups.py  spot_stream.py
engine/src/gexlens_engine/compute/: __init__.py  cumdelta.py  favalidation.py  gex.py  gexfield.py  heatmap.py  levels.py  profile.py  setups.py  volleaders.py  walls.py
engine/src/gexlens_engine/ibkr/: __init__.py  connection.py  discovery.py  hotzone.py  mock.py  pacing.py  scheduler.py  underlying.py
engine/src/gexlens_engine/storage/: __init__.py  fa_validation.py  meta.py  notify.py  oi_archive.py  parquet_store.py  retention.py  setups_store.py
engine/tests/: test_adapters.py  test_config.py  test_connection.py  test_cumdelta.py  test_discovery.py  test_e2e_smoke.py  test_favalidation.py  test_gex.py  test_gexfield.py  test_heatmap.py  test_hotzone.py  test_instruments.py  test_levels.py  test_notify.py  test_oi_archive.py  test_parquet_store.py  test_profile.py  test_retention.py  test_runtime.py  test_scheduler.py  test_setups.py  test_smoke.py  test_spot_stream.py  test_underlying.py  test_volleaders.py  test_walls.py
engine/tests/golden/: cumdelta_basic.json  e2e_reference_day.json  gex_basic.json  heatmap_basic.json  levels_basic.json  profile_basic.json  walls_basic.json
frontend/: .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/public/manual/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx  config.ts  e2e.smoke.test.tsx
frontend/src/annotations/: model.ts  (+2 more)
scripts/: bootstrap_repo.sh  build-manual.ps1  issues.json  start-gexlens.cmd
(+78 files in other folders)
