# Kořen uv workspace — sdružuje Python balíky engine/ a api/.
[project]
name = "gexlens"
version = "0.1.0"
description = "GEXLens — vizualizace opčního positioningu (GEX/OI/Vol) nad IBKR"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["engine", "api"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["gexlens_engine", "gexlens_api"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["engine/tests", "api/tests"]
asyncio_mode = "auto"
