[project]
name = "gexlens-engine"
version = "0.1.0"
description = "Datový engine GEXLens — IBKR připojení, storage, výpočty (SPEC kap. 3–5)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gexlens_engine"]
