[project]
name = "gexlens-engine"
version = "0.1.0"
description = "Datový engine GEXLens — IBKR připojení, storage, výpočty (SPEC kap. 3–5)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "ib-async>=2.0",
    "numpy>=2.0",
    "psycopg[binary]>=3.2",
    "pyarrow>=18",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gexlens_engine"]
